force-app/main/default/objects/PS_Input_Attr_Matrix__c/PS_Input_Attr_Matrix__c.object-meta.xml
<CustomObject>
    <label>PS Input Attr Matrix</label>
    <nameField>
        <label>PS Input Attr Matrix</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Input Attr Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>