force-app/main/default/objects/PS_Input_Attr_Matrix__c/fields/Field11__c.field-meta.xml
<CustomField>
    <fullName>Field11__c</fullName>
    <label>Field11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>