force-app/main/default/objects/PS_Input_Attr_Matrix__c/fields/Field13__c.field-meta.xml
<CustomField>
    <fullName>Field13__c</fullName>
    <label>Field13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>