force-app/main/default/objects/PS_Input_Attr_Matrix__c/fields/Field14__c.field-meta.xml
<CustomField>
    <fullName>Field14__c</fullName>
    <label>Field14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>