force-app/main/default/objects/PS_Input_Attr_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Field3__c</columns>
    <columns>Field4__c</columns>
    <columns>Field5__c</columns>
    <columns>Field6__c</columns>
    <columns>Field7__c</columns>
    <columns>Field8__c</columns>
    <columns>Field9__c</columns>
    <columns>CDC_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>